psl/psl/tests/validation/preview_features/partial_indexes/empty_where_clause.prisma
generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["partialIndexes"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id       Int     @id
  email    String  @unique
  isActive Boolean @default(true)

  @@index([email], where: "")
}
// error: Error parsing attribute "@index": The `where` argument cannot be an empty string.
//   -->  schema.prisma:16
//    | 
// 15 | 
// 16 |   @@index([email], where: "")
//    | 
